# TFLiteFuzzer

./: .gitignore  README.md
tflite_afl_connect/: CMakeLists.txt  CMakeLists_Release.txt  README.md  main.cpp
tflite_afl_connect/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  debug_mode
tflite_afl_connect/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  release_mode
tflite_convert/: requirements.txt  tflite_convert.ipynb  tflite_convert.py
tflite_cpp_api/: CMakeLists.txt  CMakeLists2.txt  README.md  main.cpp  run_test  tflite_cpp_api.cpp
tflite_cpp_api_test/: README.md  main.cpp
tflite_cpp_api_test/cifar10_test_dataset/: labels.csv
